--- a/base/trunk/client/mobitracer/build.xml
+++ b/base/trunk/client/mobitracer/build.xml
@@ -5,9 +5,10 @@
 -->
 <project name="MobiTracer" default="build" basedir=".">
     <property name="geotracing.base.dir" value="${basedir}/../.."/>
+	<property name="geotracing.external.dir" value="${geotracing.base.dir}/external"/>
 
     <!-- sets paths to all external package dirs. -->
-	<property file="../../external/build.properties"/>
+	<property file="${geotracing.external.dir}/build.properties"/>
 
 	<property name="build.dir" value="${basedir}/build"/>
 	
