bliin: generate version info plus build/packaging

--- a/app/bliin/trunk/server/build.properties
+++ b/app/bliin/trunk/server/build.properties
@@ -1,11 +1,12 @@
 # $Id: build.properties,v 1.3 2006-08-03 16:17:41 just Exp $
 
 # project props
-project.name=BLIIN
-project.id=bliin01
+project.name=Bliin
+project.id=bliin
 version=1.0.1
 
 war.name=bliin01
+front.name=use
 
 # specify the directory of the GeoTracing unpacked .war archive
 gt.war.dir=${basedir}/../../../../base/trunk/server/build/war
