--- a/app/geoskating/trunk/build.properties
+++ b/app/geoskating/trunk/build.properties
@@ -1,9 +1,9 @@
 # $Id: build.properties,v 1.3 2006-06-03 23:17:26 just Exp $
 
 # project props
-project.name=GEOSKATING
+project.name=GeoSkating
 project.id=gs
-version=1.0.0
+version=1.0.1
 
 war.name=gs
 
