--- a/app/geoskating/trunk/build.xml
+++ b/app/geoskating/trunk/build.xml
@@ -58,6 +58,15 @@ $Id: build.xml,v 1.1 2006-04-16 15:04:44 just Exp $
 		<replace file="${build.war.dir}/WEB-INF/cfg/portal.xml"
 				 replacefilterfile="${home}/security.properties" summary="true"/>
 
+		<!-- Set version numbers and build info in version/index.html. -->
+		<concat destfile="${build.war.dir}/version/index.html">
+			<filelist dir="${home.webapp.dir}/version" files="index.html"/>
+			<filelist dir="${gt.war.dir}/version" files="index.html"/>
+			<filterchain>
+				<expandproperties/>
+			</filterchain>
+		</concat>
+
 		<!-- Make war -->
 		<jar jarfile="${project.war}">
 			<fileset dir="${build.war.dir}">
