--- a/base/trunk/client/mobitracer/build.properties
+++ b/base/trunk/client/mobitracer/build.properties
@@ -1,4 +1,14 @@
 project.name=mobitracer
-project.midlet.name=MobiTracer
-project.midlet.class=org.geotracing.client.MobiTracer
+
+# Standard MIDlet properties to be substituted in MANIFEST.MF and .jad.template
+midlet.name=MobiTracer
+midlet.class=org.geotracing.client.MobiTracer
+midlet.icon=/app.png
+midlet.version=2.26.0
+midlet.vendor=Just Objects
+midlet.info.url=http://www.justobjects.nl
+midlet.cldc=CLDC-1.0
+midlet.midp=MIDP-2.0
+midlet.permissions=javax.microedition.io.Connector.http
+midlet.permissions.opt=javax.microedition.io.Connector.bluetooth.client,javax.microedition.media.control.VideoControl.getSnapshot
 
