--- a/base/trunk/server/webapp/gt/map/gmap-keys.properties
+++ b/base/trunk/server/webapp/gt/map/gmap-keys.properties
@@ -2,7 +2,8 @@ pundit.url=www.geotracing.com/gt
 pundit.key=ABQIAAAAD3bxjYK2kuWoA5XU4dh89xS5YRenGt3JukWk_aGP0SoHu0zjghTY1g4Ko2wi-dmVIFHnMcytcWvTtA
 
 suwa.url=test.geotracing.com/gt
-suwa.key=ABQIAAAAD3bxjYK2kuWoA5XU4dh89xSe_qXQ5BXZS4lDFg6pkSfzEHxjBxR6ccYpabqe7iuFw2yB4mZitl5HcQ
+# suwa.key=ABQIAAAAD3bxjYK2kuWoA5XU4dh89xSe_qXQ5BXZS4lDFg6pkSfzEHxjBxR6ccYpabqe7iuFw2yB4mZitl5HcQ
+suwa.key=ABQIAAAAD3bxjYK2kuWoA5XU4dh89xRwJAeN3G50o_YQw1rKznRUFZZPJBQfSrLrU-Dm48ebDMIZwnAIMGhljQ
 
 test.url=www.n8spel.nl/gt
 test.key=ABQIAAAAD3bxjYK2kuWoA5XU4dh89xR-WzhGMQoov0pNh6Gp7aysvSM44hSd3Kx-x3iubcbCn44zp0K5axAwFg
