--- a/app/bliin/trunk/server/build.xml
+++ b/app/bliin/trunk/server/build.xml
@@ -53,7 +53,15 @@ $Id: build.xml,v 1.4 2006-08-11 18:47:43 just Exp $
 		</copy>
 
 		<copy todir="${build.war.dir}/WEB-INF/cfg" overwrite="true">
-			<fileset dir="${home.cfg.dir}"/>
+			<fileset dir="${home.cfg.dir}" >
+				<exclude name="pushlet.properties"/>				
+			</fileset>
+		</copy>
+
+		<copy todir="${build.war.dir}/WEB-INF/classes" overwrite="true">
+			<fileset dir="${home.cfg.dir}">
+				<include name="pushlet.properties"/>
+			</fileset>
 		</copy>
 
 		<copy todir="${build.war.dir}" overwrite="true">
