--- a/app/walkandplay/trunk/server/cfg/server.properties
+++ b/app/walkandplay/trunk/server/cfg/server.properties
@@ -20,6 +20,6 @@ keyworx.log.dir=/var/keyworx/log/walkandplay
 # default: INFO
 keyworx.log.level=INFO
 
-#keyworx.mail.server=smtp1.waag.org
-keyworx.mail.server=smtp.wanadoo.nl
+keyworx.mail.server=smtp1.waag.org
+#keyworx.mail.server=smtp.wanadoo.nl
 
