--- a/base/trunk/external/build.properties
+++ b/base/trunk/external/build.properties
@@ -37,6 +37,10 @@ dojo-ajax.dir=${geotracing.external.dir}/${dojo-ajax}
 keyworx=keyworx-1.0.6rc5
 keyworx.dir=${geotracing.external.dir}/${keyworx}
 
+# KeyWorx tagging plugin - provider: www.keyworx.org
+kwx-tagging=kwx-tagging-1.0.0
+kwx-tagging.dir=${geotracing.external.dir}/${kwx-tagging}
+
 # J2ME MIDP20 API - for compiling
 midp2=midp20
 midp2.dir=${geotracing.external.dir}/${midp2}
