--- a/app/walkandplay/trunk/client/web/build.properties
+++ b/app/walkandplay/trunk/client/web/build.properties
@@ -7,8 +7,9 @@ product.name=wpweb
 
 project.version=1.0.0
 
-deploy.local.dir=/var/keyworx/webapps/test.geotracing.com
-deploy.live.dir=/Volumes/homes/httpd/geotracing.com
+# directories for webclient files
+deploy.local.dir=/var/keyworx/webapps/local.walkandplay.com
+deploy.test.dir=keyworx@test.waag.org:/var/keyworx/webapps/test.walkandplay.com
 
 
 
