--- a/app/walkandplay/trunk/server/cfg/server.properties
+++ b/app/walkandplay/trunk/server/cfg/server.properties
@@ -21,5 +21,6 @@ keyworx.log.dir=/var/keyworx/log/walkandplay
 keyworx.log.level=INFO
 
 keyworx.mail.server=smtp1.waag.org
-#keyworx.mail.server=smtp.wanadoo.nl
+keyworx.mail.sender=info@walkandplay.com
+host.name=http://www.walkandplay.com/
 
