base: added metadata plugin kwx

--- a/base/trunk/external/build.properties
+++ b/base/trunk/external/build.properties
@@ -41,6 +41,10 @@ keyworx.dir=${geotracing.external.dir}/${keyworx}
 kwx-tagging=kwx-tagging-1.0.0
 kwx-tagging.dir=${geotracing.external.dir}/${kwx-tagging}
 
+# KeyWorx tagging plugin - provider: www.keyworx.org
+kwx-metadata=kwx-metadata-1.0.0
+kwx-metadata.dir=${geotracing.external.dir}/${kwx-metadata}
+
 # J2ME MIDP20 API - for compiling
 midp2=midp20
 midp2.dir=${geotracing.external.dir}/${midp2}
