--- a/app/walkandplay/trunk/build.properties
+++ b/app/walkandplay/trunk/build.properties
@@ -12,6 +12,7 @@ gt.war.dir=${basedir}/../../../base/trunk/server/build/war
 
 # specify the directory for your (tomcat) webapps
 deploy.test.dir=/var/keyworx/webapps/test.walkandplay.com
+deploy.local.dir=/var/keyworx/webapps/test.walkandplay.com
 deploy.live.dir=/Volumes/homes/httpd/walkandplay.com
 
 
