--- a/app/walkandplay/trunk/client/web/build.xml
+++ b/app/walkandplay/trunk/client/web/build.xml
@@ -98,14 +98,15 @@ $Id$
 	<target name="build" depends="package"/>
 
 
-	<target name="sync-test">
+	<target name="copy-test">
 		<exec executable="scp">
+			<arg line="-r"/>
 			<arg line="${home}"/>
 			<arg line="${deploy.test.dir}"/>
 		</exec>
 	</target>
 
-	<target name="sync-local">
+	<target name="deploy-local">
 		<copy todir="${deploy.local.dir}" overwrite="true">
 			<fileset dir="${home}"/>
 		</copy>
